// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  className="content-container-static"
>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`should render a footer 1`] = `
<div
  className="content-container-static"
>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={-1}
    />
  </div>
  <div
    className="footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;

exports[`should render a header 1`] = `
<div
  className="content-container-static"
>
  <div
    className="header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`should render as fill 1`] = `
<div
  className="content-container-fill"
>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`should render content 1`] = `
<div
  className="content-container-static"
>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={-1}
    >
      <p>
        test content
      </p>
    </Scroll>
  </div>
</div>
`;

exports[`should render header & footer 1`] = `
<div
  className="content-container-static"
>
  <div
    className="header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="main"
  >
    <Scroll
      className="normalizer"
      tabIndex={-1}
    />
  </div>
  <div
    className="footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;
